<resources>
    <string name="app_name">TrojaNow</string>
    <string name="account_type">us.grahn.trojanow</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_pal_interface">PalInterface</string>
    <string name="hello_blank_fragment">Hello World!</string>

    <!-- Main Menu -->
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>

    <!-- Common -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Home Screen -->
    <string name="login_notification">Want the full experience?</string>

    <!-- Activities -->
    <string name="title_activity_create_post">Create Post</string>
    <string name="title_activity_subscribe">SubscribeActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_environment">EnvironmentActivity</string>
    <string name="title_activity_audience">AudienceActivity</string>
    <string name="title_activity_authentication">Login to TrojaNow</string>
    <string name="title_activity_sign_up">Create Account</string>

    <!-- Create Post -->
    <string name="field_anonymous">Anonymous</string>

    <!-- Button -->
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_create_post">Create</string>
    <string name="button_add_sensor">Add Environment</string>
    <string name="button_add_emotion">Add Emotion</string>

    <!-- Messages -->
    <string name="failed_login_title">Login Failed</string>
    <string name="failed_login_message">Your credentials are invalid!</string>

    <string name="invalid_name_title">Invalid Name</string>
    <string name="invalid_name_message">Please use a valid name (i.e. Mark Sloan)</string>

    <string name="invalid_email_title">Invalid Email</string>
    <string name="invalid_email_message">Please use a valid email.</string>

    <string name="missing_password_title">Missing Password</string>
    <string name="missing_password_message">Please provide a password.</string>

    <string name="nonmatch_password_title">Invalid Passwords</string>
    <string name="nonmatch_password_message">The passwords don\'t match.</string>


    <!-- Hint -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password_confirm">Password (Confirm)</string>
    <string name="hint_name">Name</string>
</resources>
