<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context="us.grahn.trojanow.presentation.authentication.SignUpActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:text="Test User"
        android:ems="10"
        android:layout_marginBottom="@dimen/form_bottom"
        android:id="@+id/signup_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:text="test@grahn.us"
        android:layout_marginBottom="@dimen/form_bottom"
        android:id="@+id/signup_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:ems="10"
        android:text="password"
        android:layout_marginBottom="@dimen/form_bottom"
        android:id="@+id/signup_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password_confirm"
        android:layout_marginBottom="@dimen/form_bottom"
        android:ems="10"
        android:text="password"
        android:id="@+id/signup_password_confirm"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_signup"
        android:layout_gravity="right"
        android:layout_marginBottom="@dimen/form_bottom"
        android:onClick="signup"
        android:backgroundTint="@color/secondary"/>

</LinearLayout>
